[package]
name = "qauth"
version = "0.1.2"
authors = ["Zertex <zertex@quartzinc.space>"]
edition = "2018"
description = "Client library for the QuartzAuth API"
homepage = "https://auth.quartzinc.space"
documentation = "https://quartz.wiki"
license-file = "LICENSE"
repository = "https://github.com/Zert3x/QA-Rust"
readme = "readme.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6.0"
block-modes = "0.8.1"
rand = "0.8.3"
md5 = "0.7.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
bcrypt = "0.9.0"
itertools = "0.10.0"
hex = "0.4.2"
chrono = { version = "0.4.19", features = ["serde"] }
sysinfo = "0.16.4"
base64 = "0.13.0"
openssl = { version = "0.10.35", features = ["vendored"] }
openssl-sys = "0.9.65"
num-traits = "0.2.14"
num-derive = "0.3.3"
