[package]
name = "qauth"
version = "0.1.2"
authors = ["Zertex <zertex@quartzinc.space>"]
edition = "2018"
description = "Client library for the QuartzAuth API"
homepage = "https://auth.quartzinc.space"
documentation = "https://quartz.wiki"
license-file = "LICENSE"
repository = "https://github.com/Zert3x/QA-Rust"
readme = "readme.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.4"
block-modes = "0.8.1"
rand = "0.8.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
bcrypt = "0.10.1"
itertools = "0.10.0"
machineid-rs = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
base64 = "0.13.0"
openssl = { version = "0.10.35", features = ["vendored"] }
openssl-sys = "0.9.65"
num-traits = "0.2.14"
num-derive = "0.3.3"
